--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <title>Wagner Silva</title>
 </head>
@@ -35,7 +36,7 @@
         <section>
             <nav id="header">
                 <ul class="ul-header">
-                    <li class="li-header"><a href="#">Inicio</a></li>
+                    <li class="li-header"><a href="">Inicio</a></li>
                     <li class="li-header"><a href="#about">Sobre</a></li>
                     <li class="li-header"><a href="#skill">Habilidades</a></li>
                     <li class="li-header"><a href="#projects">Projetos</a></li>
