insert skill git

--- a/index.html
+++ b/index.html
@@ -132,6 +132,9 @@
                         <li><img src="./assets/c.svg" alt="icon-c#" />
                             <p>C#</p>
                         </li>
+                        <li><i class="fa-brands fa-git-alt"></i>
+                            <p>Git / GitHub</p>
+                        </li>
 
                     </ul>
                 </div>
