update skill RN

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
                             <p>React</p>
                         </li>
                         <li><i class="fa-brands fa-android"></i>
+                            <i class="fa-brands fa-react"></i>
                             <i class="fa-brands fa-apple"></i>
                             <p>React Native</p>
                         </li>
