--- a/index.html
+++ b/index.html
@@ -78,11 +78,12 @@
 
             <p class="about-p">Meu nome é Wagner Silva, moro na cidade de São Paulo, profissional na área de tecnologia
                 como auxiliar técnico de informática em transição de
-                carreira para programação, com foco em atuar como desenvolvedor Front-End.<br>
-                Graduado em análise e desenvolvimento de sistema na Universidade Paulista UNIP, estou em
-                busca da primeira oportunidade no mercado como desenvolvedor.
-                Em constante aprendizado e evolução criando projetos, colocando em prática ao máximo meus conhecimentos.
+                carreira para programação, com foco em atuar como desenvolvedor Front-End.
+                <br>
+                Graduado em analise e desenvolvimento de sistema na Universidade Paulista UNIP, pude ter os primeiros contatos com a programação, a partir daí venho buscando enriquecer 
+                cada vez mais meus conhecimentos, desenvolvendo projetos incríveis buscando oferecer as melhores soluções para o usuário final.
             </p>
+      
 
             <img class="my-img-home" src="assets/profile.jpeg" alt="imagem perfil" />
 
