--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <section>
             <nav id="header">
                 <ul class="ul-header">
-                    <li class="li-header"><a href="">Inicio</a></li>
+                    <li class="li-header"><a href="#">Inicio</a></li>
                     <li class="li-header"><a href="#about">Sobre</a></li>
                     <li class="li-header"><a href="#skill">Habilidades</a></li>
                     <li class="li-header"><a href="#projects">Projetos</a></li>
@@ -81,7 +81,7 @@
                 carreira para programação, com foco em atuar como desenvolvedor Front-End.
                 <br>
                 Graduado em analise e desenvolvimento de sistema na Universidade Paulista UNIP, pude ter os primeiros contatos com a programação, a partir daí venho buscando enriquecer 
-                cada vez mais meus conhecimentos, desenvolvendo projetos incríveis buscando oferecer as melhores soluções para o usuário final.
+                cada vez mais meus conhecimentos, desenvolvendo projetos incríveis buscando oferecer soluções eficientes.
             </p>
       
 
@@ -171,6 +171,7 @@
                         <i class="fab fa-linkedin-in"></i></a>
                 </li>
             </ul>
+            <p>Wagner Siva &copy 2023</p>
         </footer>
     </main>
 </body>
