--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                         <i class="fab fa-linkedin-in"></i></a>
                 </li>
             </ul>
-            <p>Wagner Siva &copy 2023</p>
+            <p>Wagner Silva &copy 2023</p>
         </footer>
     </main>
 </body>
