--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 como auxiliar técnico de informática em transição de
                 carreira para programação, com foco em atuar como desenvolvedor Front-End.
                 <br>
-                Graduado em analise e desenvolvimento de sistema na Universidade Paulista UNIP, pude ter os primeiros contatos com a programação, a partir daí venho buscando enriquecer 
+                Graduado em análise e desenvolvimento de sistema na Universidade Paulista UNIP, pude ter os primeiros contatos com a programação, a partir daí venho buscando enriquecer 
                 cada vez mais meus conhecimentos, desenvolvendo projetos incríveis buscando oferecer soluções eficientes.
             </p>
       
