--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
 
             <p class="about-p">Meu nome é Wagner Silva, moro na cidade de São Paulo, profissional na área de tecnologia
-                como auxiliar técnico de informática em transição de
+                como técnico de informática em transição de
                 carreira para programação, com foco em atuar como desenvolvedor Front-End.
                 <br>
                 Graduado em análise e desenvolvimento de sistema na Universidade Paulista UNIP, pude ter os primeiros contatos com a programação, a partir daí venho buscando enriquecer 
@@ -124,6 +124,9 @@
                         </li>
                         <li><img src="./assets/styled-components.svg" alt="icon-styled-components" />
                             <p>Styled-Components</p>
+                        </li>
+                        <li><i class="fa-brands fa-sass"></i>
+                            <p>SASS</p>
                         </li>
                         <li><i class="fa-brands fa-node"></i>
                             <p>NodeJS</p>
