feat: adding new skills

--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@
                         <li><img src="./assets/styled-components.svg" alt="icon-styled-components" />
                             <p>Styled-Components</p>
                         </li>
+                        <li><img src="./assets/material.svg" alt="icon-styled-components" />
+                            <p>Material UI</p>
+                        </li>
                         <li><i class="fa-brands fa-sass"></i>
                             <p>SASS</p>
                         </li>
@@ -133,6 +136,9 @@
                         </li>
                         <li><i class="fa-solid fa-database"></i>
                             <p>SQL</p>
+                        </li>
+                        <li><img src="./assets/docker.svg" alt="icon-c#" />
+                            <p>Docker</p>
                         </li>
                         <li><img src="./assets/c.svg" alt="icon-c#" />
                             <p>C#</p>
