feat: adding new skills

--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
                             <i class="fa-brands fa-apple"></i>
                             <p>React Native</p>
                         </li>
+                        <li><img src="./assets/typescript.svg"></i>
+                            <p>TypeScript</p>
+                        </li>
                         <li><img src="./assets/firebase.svg" alt="icon-firebase" />
                             <p>Firebase</p>
                         </li>
@@ -137,6 +140,11 @@
                         <li><i class="fa-solid fa-database"></i>
                             <p>SQL</p>
                         </li>
+                        <li><img src="./assets/postgre.svg"></i>
+                            <p>PostgreSQL</p>
+                        </li>
+                        <li><img src="./assets/mongo.svg"></i>
+                            <p>MongoDB</p>
                         <li><img src="./assets/docker.svg" alt="icon-c#" />
                             <p>Docker</p>
                         </li>
